# refatoracao-site-angular-to-ssr-generate-docs

./: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.docs.json  tsconfig.json
public/assets/: BUILD.bazel
public/assets/icons/: BUILD.bazel  browserconfig.xml
public/assets/images/: BUILD.bazel
public/assets/previews/: BUILD.bazel
public/introduction/: what-is-angular.md.html
public/introduction/essentials/: components.md.html  overview.md.html
src/: index.html  robots.txt
src/app/: app-scroller.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.server.ts  app.config.ts  routes.ts  sub-navigation-data.ts
src/assets/icons/: site.webmanifest
src/assets/textures/: BUILD.bazel
src/content/: BUILD.bazel  error.md  kitchen-sink.md
src/content/best-practices/: BUILD.bazel  a11y.md  style-guide.md  update.md
src/content/cli/: BUILD.bazel  index.md
src/content/ecosystem/: BUILD.bazel
src/content/examples/: .eslintrc.json  tsconfig.eslint.json
src/content/guide/: BUILD.bazel  defer.md  elements.md  elements.md.html  hydration.md  image-optimization.md  prerendering.md  prerendering.md.html  security.md  ssr.md  zoneless.md
src/content/introduction/: BUILD.bazel  what-is-angular.md
src/content/introduction/essentials/: BUILD.bazel  components.md  conditionals-and-loops.md  handling-user-interaction.md  managing-dynamic-data.md  next-steps.md  overview.md  rendering-dynamic-templates.md  sharing-logic.md
src/content/reference/: BUILD.bazel  (+6 more)
src/styles/: _xterm.scss
(+584 files in other folders)
