load("@npm//@angular/docs:index.bzl", "generate_guides")

generate_guides(
    name = "essentials",
    srcs = glob([
        "*.md",
    ]),
    data = [
        "//src/assets/images:components.svg",
        "//src/assets/images:dependency_injection.svg",
        "//src/assets/images:directives.svg",
        "//src/assets/images:overview.svg",
        "//src/assets/images:roadmap.svg",
        "//src/assets/images:signals.svg",
        "//src/assets/images:templates.svg",
        "//src/assets/images:what_is_angular.svg",
    ],
    mermaid_blocks = True,
    visibility = ["//adev:__subpackages__"],
)
